# alphachess

./: .gitignore  README.md  pyproject.toml
alphachess/: config.py  storage.py
alphachess/game/: chess_env.py  encoding.py
alphachess/mcts/: search.py  tree.py
alphachess/nn/: inference.py  model.py
alphachess/pretrain/: dataset.py  db_ingest.py  trainer.py
configs/: laptop.yaml  vast.yaml
scripts/: pretrain.py  upload_data.py
tests/: test_config.py  test_encoding.py  test_game.py  test_mcts.py  test_pretrain_dataset.py  test_pretrain_ingest.py  test_storage.py
